# dio-santander-workout-api

./: Makefile  README.md  alembic.ini  docker-compose.postgres.yml  pyproject.toml
app/: main.py  routers.py
app/alembic/: README  env.py
app/alembic/versions/: 84649119151e_initial_tables.py
app/contrib/: dependencies.py  models.py  schemas.py
app/core/: __init__.py  databases.py  repository.py  settings.py
app/modules/athlete/: __init__.py  controller.py  models.py  repository.py  schemas.py
app/modules/category/: __init__.py  controller.py  models.py  repository.py  schemas.py
app/modules/training_center/: controller.py  models.py  repository.py  schemas.py
